// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a disabled toggle that is enabled 1`] = `
<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="kXYdPH"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="gzLwoW"
    />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV"
  >
    Off
  </span>
</div>
`;

exports[`a disabled toggle that is enabled 2`] = `
<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="ldWdTm"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="diphEL"
    />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV"
  >
    On
  </span>
</div>
`;

exports[`a disabled toggle which matches the snapshot 1`] = `
<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="kXYdPH"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="gzLwoW"
    />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV"
  >
    Off
  </span>
</div>
`;

exports[`an enabled toggle that is disabled 1`] = `
<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="ldWdTm"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="diphEL"
    />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV"
  >
    On
  </span>
</div>
`;

exports[`an enabled toggle that is disabled 2`] = `
<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="kXYdPH"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="gzLwoW"
    />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV"
  >
    Off
  </span>
</div>
`;

exports[`an enabled toggle which matches the snapshot 1`] = `
<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="ldWdTm"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0"
  >
    <span
      className="diphEL"
    />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV"
  >
    On
  </span>
</div>
`;
